# trossen_slate

./: .gitignore  CMakeLists.txt  Makefile  package.xml  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-pypi.yaml  wheels.yaml
cmake/: version.hpp.in
demo/: advanced_demo.cpp  basic_demo.cpp  reset_odom_demo.cpp
demos/: advanced_demo.cpp  basic_demo.cpp
include/: base_driver.hpp  serial_driver.hpp  slate_base.hpp
include/libtrossen_slate/: base_driver.hpp  serial_driver.hpp  trossen_slate.hpp
include/trossen_slate/: slate_base.hpp  trossen_slate.hpp
python/: pytrossen_slate.cpp  trossen_slate.cpp
python/trossen_slate/: __init__.py
python/trossen_slate/demo/: advanced_demo.py  basic_demo.py
src/: base_driver.cpp  slate_base.cpp  test.cpp  trossen_slate.cpp  trossen_slate_node.cpp
